gcc/testsuite/g++.dg/cpp0x/vt-34399.C
// { dg-options "-std=c++0x" }
template<int...> struct A
{
  void foo();
};

struct B
{
  template<int N> friend void A<N>::A::foo(); // { dg-error "declared as friend" }
};
